[tool.poetry]
name = "ab-util"
version = "0.1.0"
description = ""
authors = ["Karasaev Danat"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.34.2"
fastapi = "^0.115.12"
aiohttp = "^3.11.18"
httpx = "^0.28.1"
requests = "^2.32.3"
python-dotenv = "^1.1.0"
numpy = "^2.2.5"
pydantic = "^2.11.3"
pydantic-settings = "^2.9.1"
omegaconf = "^2.3.0"
typing-extensions = "^4.12.2"
prometheus-client = "^0.22.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"